--- a/src/style/Skills.scss
+++ b/src/style/Skills.scss
@@ -50,10 +50,10 @@
 
 }
 
-.hidden {
+.hidden-skill {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(-100%);
+    transform: translateX(100%);
     transition: all 3000ms;
 }
 
